tests/snapshots/render/ansi@commonmark-spec-086-setext_headings.snap
---
source: tests/render.rs
assertion_line: 112
expression: "render_to_string(markdown_file, &ansi_settings)"
input_file: tests/markdown/commonmark-spec/086-setext_headings.md
snapshot_kind: text
---
[1m[34mFoo[0m
[1m[34m────────────────────────────────────────────────────────────────────────────────[0m
